# ws_primeiro_agente

./: CLAUDE.md  PROMPT_CODEX.md  README.md  SEGURANCA.md  agent_structured_output.py  main.py  old_README.md  pyproject.toml  resposta.txt
chat/: llm_models.py
src/: settings.py
