[project]
name = "ws-primeiro-agente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "openai>=2.46.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]
